--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -62,7 +62,16 @@
     </head>
     <body class="top-navigation">
         <!-- Start Help modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="help-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -76,7 +85,8 @@
                             <div class="col-sm-12">
                                 <h4>General instructions</h4>
                                 <p class="help-text">
-                                    You can find info for the general use of the app on this <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
+                                    You can find info for the general use of the app on this
+                                    <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
                                 </p>
                             </div>
                         </div>
@@ -84,7 +94,10 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <h4>Scenarios visualizer</h4>
-                                <p class="help-text">A full scenarions visualization can be found on this <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a></p>
+                                <p class="help-text">
+                                    A full scenarions visualization can be found on this
+                                    <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a>
+                                </p>
                             </div>
                         </div>
                         <hr />
@@ -104,7 +117,16 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Job modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" id="add-job-modal" style="top: 15%" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            id="add-job-modal"
+            style="top: 15%"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="job-modal-header" class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -119,19 +141,36 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Department*</label>
-                                        <select class="form-control select" id="division-select" data-placeholder="Choose a department..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="division-select"
+                                            data-placeholder="Choose a department..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Product*</label>
-                                        <select class="form-control select" id="product-select" multiple data-placeholder="Choose a product..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="product-select"
+                                            multiple
+                                            data-placeholder="Choose a product..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Vessel*</label>
-                                        <select class="form-control select" id="vessel-select" multiple data-placeholder="Choose a vessel..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="vessel-select"
+                                            multiple
+                                            data-placeholder="Choose a vessel..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                             </div>
@@ -170,7 +209,12 @@
                                     <div class="form-group">
                                         <label> Service</label>
                                         <a id="service-type-info" href="#"><i class="fa fa-info"></i></a>
-                                        <select class="form-control select" id="service-type-select" data-placeholder="Choose service type..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="service-type-select"
+                                            data-placeholder="Choose service..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -227,7 +271,16 @@
         <!-- End Job modal -->
 
         <!-- Start Costs modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="costs-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="costs-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="cost-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -257,7 +310,12 @@
                                     <label>Group deadline*</label>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
-                                        <input class="single-date-picker form-control" type="text" placeholder="Select group deadline" id="group_cut_off_date" />
+                                        <input
+                                            class="single-date-picker form-control"
+                                            type="text"
+                                            placeholder="Select group deadline"
+                                            id="group_cut_off_date"
+                                        />
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
@@ -271,13 +329,23 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Group Ex*</label>
-                                        <select class="form-control select" id="group-ex-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="group-ex-select"
+                                            data-placeholder="Choose city..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Group To*</label>
-                                        <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="group-to-select"
+                                            data-placeholder="Choose city..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                             </div>
@@ -328,7 +396,16 @@
         <!-- End Costs modal -->
 
         <!-- Start Personnel Costs modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="personnel-costs-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="personnel-costs-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="personnel-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -356,13 +433,25 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Saving</label>
-                                    <input type="number" class="form-control" placeholder="Savings will be calculated once you fill actual cost..." id="personnel-savings" disabled />
+                                    <input
+                                        type="number"
+                                        class="form-control"
+                                        placeholder="Savings will be calculated once you fill actual cost..."
+                                        id="personnel-savings"
+                                        disabled
+                                    />
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Saving %</label>
-                                    <input type="number" class="form-control" placeholder="Savings % will be calculated once you fill actual cost..." id="personnel-savings-percent" disabled />
+                                    <input
+                                        type="number"
+                                        class="form-control"
+                                        placeholder="Savings % will be calculated once you fill actual cost..."
+                                        id="personnel-savings-percent"
+                                        disabled
+                                    />
                                 </div>
                             </div>
                             <div class="col-sm-12" style="display: none">
