--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -367,7 +367,7 @@
             </div>
             <footer>
                 <!-- Copyright -->
-                <div class="footer-copyright text-center py-3">© 2020 Copyright: <a href="#"> PARIS ANANIA.</a> All rights reserved.</div>
+                <!-- <div class="footer-copyright text-center py-3">© 2020 Copyright: <a href="#"> PARIS ANANIA.</a> All rights reserved.</div> -->
                 <!-- Copyright -->
             </footer>
         </section>
