--- a/pages/deleted_individuals.html
+++ b/pages/deleted_individuals.html
@@ -63,7 +63,16 @@
     </head>
     <body class="top-navigation">
         <!-- Start Help modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="help-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -77,7 +86,8 @@
                             <div class="col-sm-12">
                                 <h4>General instructions</h4>
                                 <p class="help-text">
-                                    You can find info for the general use of the app on this <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
+                                    You can find info for the general use of the app on this
+                                    <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
                                 </p>
                             </div>
                         </div>
@@ -85,7 +95,10 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <h4>Scenarios visualizer</h4>
-                                <p class="help-text">A full scenarions visualization can be found on this <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a></p>
+                                <p class="help-text">
+                                    A full scenarions visualization can be found on this
+                                    <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a>
+                                </p>
                             </div>
                         </div>
                         <hr />
@@ -105,7 +118,16 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Notes modal -->
-        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="notes-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade bd-example-modal-sm"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="notes-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="edit-notes-modal-header" class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -253,7 +275,7 @@
             </div>
             <footer>
                 <!-- Copyright -->
-                <div class="footer-copyright text-center py-3">© 2020 Copyright: <a href="#"> PARIS ANANIA.</a> All rights reserved.</div>
+                <!-- <div class="footer-copyright text-center py-3">© 2020 Copyright: <a href="#"> PARIS ANANIA.</a> All rights reserved.</div> -->
                 <!-- Copyright -->
             </footer>
         </section>
