--- a/pages/done_individuals.html
+++ b/pages/done_individuals.html
@@ -68,7 +68,16 @@
     </head>
     <body class="top-navigation">
         <!-- Start Help modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="help-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -82,7 +91,8 @@
                             <div class="col-sm-12">
                                 <h4>General instructions</h4>
                                 <p class="help-text">
-                                    You can find info for the general use of the app on this <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
+                                    You can find info for the general use of the app on this
+                                    <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
                                 </p>
                             </div>
                         </div>
@@ -90,7 +100,10 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <h4>Scenarios visualizer</h4>
-                                <p class="help-text">A full scenarions visualization can be found on this <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a></p>
+                                <p class="help-text">
+                                    A full scenarions visualization can be found on this
+                                    <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a>
+                                </p>
                             </div>
                         </div>
                         <hr />
@@ -110,7 +123,16 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Notes modal -->
-        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="notes-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade bd-example-modal-sm"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="notes-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="edit-notes-modal-header" class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -137,7 +159,16 @@
         <!-- Start Notes modal -->
 
         <!-- Start Costs modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="done-costs-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="done-costs-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="cost-data-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -213,7 +244,16 @@
         </div>
         <!-- End Costs modal -->
         <!-- Start Consolidation group modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="assignment-group-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="assignment-group-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="assignment-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -238,7 +278,16 @@
         <!-- End Consolidation group modal -->
 
         <!-- Start Personnel Costs modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="done-personnel-costs-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="done-personnel-costs-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="done-personnel-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -266,13 +315,25 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Saving</label>
-                                    <input type="number" class="form-control" placeholder="Savings will be calculated once you fill actual cost..." id="personnel-savings" disabled />
+                                    <input
+                                        type="number"
+                                        class="form-control"
+                                        placeholder="Savings will be calculated once you fill actual cost..."
+                                        id="personnel-savings"
+                                        disabled
+                                    />
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Saving %</label>
-                                    <input type="number" class="form-control" placeholder="Savings % will be calculated once you fill actual cost..." id="personnel-savings-percent" disabled />
+                                    <input
+                                        type="number"
+                                        class="form-control"
+                                        placeholder="Savings % will be calculated once you fill actual cost..."
+                                        id="personnel-savings-percent"
+                                        disabled
+                                    />
                                 </div>
                             </div>
                         </div>
@@ -408,7 +469,7 @@
             </div>
             <footer>
                 <!-- Copyright -->
-                <div class="footer-copyright text-center py-3">© 2020 Copyright: <a href="#"> PARIS ANANIA.</a> All rights reserved.</div>
+                <!-- <div class="footer-copyright text-center py-3">© 2020 Copyright: <a href="#"> PARIS ANANIA.</a> All rights reserved.</div> -->
                 <!-- Copyright -->
             </footer>
         </section>
