--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -64,7 +64,16 @@
     </head>
     <body class="top-navigation">
         <!-- Start Help modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="help-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -78,7 +87,8 @@
                             <div class="col-sm-12">
                                 <h4>General instructions</h4>
                                 <p class="help-text">
-                                    You can find info for the general use of the app on this <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
+                                    You can find info for the general use of the app on this
+                                    <a href="#" id="help-instructions" class="help-link" id="" style="cursor: pointer">LINK</a>
                                 </p>
                             </div>
                         </div>
@@ -86,7 +96,10 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <h4>Scenarios visualizer</h4>
-                                <p class="help-text">A full scenarions visualization can be found on this <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a></p>
+                                <p class="help-text">
+                                    A full scenarions visualization can be found on this
+                                    <a href="#" id="help-visualizer" style="cursor: pointer">LINK</a>
+                                </p>
                             </div>
                         </div>
                         <hr />
@@ -106,7 +119,16 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Group Data Modal-->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="group-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="group-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="cost-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -132,7 +154,12 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Service</label>
-                                    <select class="form-control select" id="service-type-select" data-placeholder="Choose service..." tabindex="1"></select>
+                                    <select
+                                        class="form-control select"
+                                        id="service-type-select"
+                                        data-placeholder="Choose service..."
+                                        tabindex="1"
+                                    ></select>
                                 </div>
                             </div>
                         </div>
@@ -141,13 +168,23 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Ex</label>
-                                        <select class="form-control select" id="group-ex-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="group-ex-select"
+                                            data-placeholder="Choose city..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> To</label>
-                                        <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="group-to-select"
+                                            data-placeholder="Choose city..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                             </div>
@@ -163,7 +200,12 @@
                                     <label>Deadline</label>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
-                                        <input class="single-date-picker form-control" type="text" placeholder="Select consol. deadline" id="group-deadline" />
+                                        <input
+                                            class="single-date-picker form-control"
+                                            type="text"
+                                            placeholder="Select consol. deadline"
+                                            id="group-deadline"
+                                        />
                                     </div>
                                 </div>
                             </div>
@@ -307,7 +349,7 @@
             </div>
             <footer>
                 <!-- Copyright -->
-                <div class="footer-copyright text-center py-3">© 2020 Copyright: <a href="#"> PARIS ANANIA.</a> All rights reserved.</div>
+                <!-- <div class="footer-copyright text-center py-3">© 2020 Copyright: <a href="#"> PARIS ANANIA.</a> All rights reserved.</div> -->
                 <!-- Copyright -->
             </footer>
         </section>
