Fixed ordering messages and field validation

--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -178,6 +178,7 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Mode*</label>
+                                        <a class="mode-info" href="#"><i class="fa fa-info"></i></a>
                                         <select class="form-control select" id="mode-select" data-placeholder="Choose mode..." tabindex="1">
                                             <option></option>
                                             <option value="Air">Air</option>
@@ -208,7 +209,6 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Service</label>
-                                        <a id="service-type-info" href="#"><i class="fa fa-info"></i></a>
                                         <select
                                             class="form-control select"
                                             id="service-type-select"
@@ -246,6 +246,8 @@
                                 <div class="form-group col-sm-4">
                                     <label>Deadline*</label>
                                     <a id="remove-date" href="#"><i class="fa fa-calendar-minus-o"></i></a>
+                                    <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
+
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
                                         <input class="single-date-picker form-control" type="text" placeholder="Select deadline" id="deadline_date" />
@@ -308,6 +310,7 @@
                             <div class="row">
                                 <div class="form-group col-sm-6">
                                     <label>Group deadline*</label>
+                                    <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
                                         <input
