--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -198,6 +198,7 @@
                                 </div>
                                 <div class="form-group col-sm-6">
                                     <label>Deadline</label>
+                                    <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
                                         <input
